A small fix for layout issues in Chromium-browsers.

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -27,7 +27,7 @@
     }
 
     main {
-        justify-content: end;
+        justify-content: flex-end;
         padding-bottom: 20vh;
     }
 
